[dev]: Add fit-content to width for pfe-icon to prevent stretch

--- a/elements/pfe-icon/src/pfe-icon.scss
+++ b/elements/pfe-icon/src/pfe-icon.scss
@@ -29,7 +29,8 @@ $pfe-icon--border-style:  #{pfe-var(ui--border-style)};
   --pfe-icon--BorderColor:             transparent;
 
   position: relative;
-  display: inline-block;
+  display:  inline-block;
+  width:    fit-content;
   line-height: 0;
 
   @at-root #{&}([data-block]) {
